dist_man1_MANS=

if BUILD_QBITSCOIND
  dist_man1_MANS+=qbitscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=qbitscoin-qt.1
endif

if BUILD_QBITSCOIN_CLI
  dist_man1_MANS+=qbitscoin-cli.1
endif

if BUILD_QBITSCOIN_TX
  dist_man1_MANS+=qbitscoin-tx.1
endif

if BUILD_QBITSCOIN_UTIL
  dist_man1_MANS+=qbitscoin-util.1
endif

if ENABLE_WALLET
if BUILD_QBITSCOIN_WALLET
  dist_man1_MANS+=qbitscoin-wallet.1
endif
endif
